--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,48 @@
-attrs==23.1.0
-beautifulsoup4==4.12.2
-black==23.3.0
-build==0.10.0
-cattrs==23.1.2
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
+attrs==23.2.0
+beautifulsoup4==4.12.3
+black==24.2.0
+build==1.1.1
+cattrs==23.2.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
-cryptography==41.0.3
+cryptography==42.0.5
 decorator==5.1.1
 Deprecated==1.2.14
-exceptiongroup==1.1.1
-filelock==3.12.2
-idna==3.4
+exceptiongroup==1.2.0
+filelock==3.13.1
+idna==3.6
 markdown-it-py==3.0.0
 mdurl==0.1.2
-mypy==1.4.1
+mypy==1.9.0
 mypy-extensions==1.0.0
-packageurl-python==0.11.1
-packaging==23.1
-pathspec==0.11.1
-platformdirs==3.10.0
+packageurl-python==0.14.0
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.0
 pycparser==2.21
-PyGithub==1.59.0
-Pygments==2.15.1
-PyJWT==2.7.0
+PyGithub==2.2.0
+Pygments==2.17.2
+PyJWT==2.8.0
 PyNaCl==1.5.0
 pyproject_hooks==1.0.0
-PyYAML==6.0
+PyYAML==6.0.1
 requests==2.31.0
-requests-cache==1.0.1
-rich==13.4.2
+requests-cache==1.2.0
+rich==13.7.1
 six==1.16.0
-soupsieve==2.4.1
-termcolor==2.3.0
+soupsieve==2.5
+termcolor==2.4.0
 tomli==2.0.1
-types-PyYAML==6.0.12.10
-types-requests==2.31.0.1
-types-urllib3==1.26.25.13
-typing_extensions==4.7.1
-uritools==4.0.1
+types-PyYAML==6.0.12.12
+types-requests==2.31.0.20240310
+types-urllib3==1.26.25.14
+typing_extensions==4.10.0
+uritools==4.0.2
 url-normalize==1.4.3
-urlextract==1.8.0
-urllib3==2.0.3
-validators==0.20.0
-wrapt==1.15.0
+urlextract==1.9.0
+urllib3==2.2.1
+validators==0.22.0
+wrapt==1.16.0
